--- a/WeatherAPI/View/Base.lproj/Main.storyboard
+++ b/WeatherAPI/View/Base.lproj/Main.storyboard
@@ -1,24 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WeatherAPI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0Z-lT-80j" userLabel="TF - Search">
+                                <rect key="frame" x="0.0" y="44" width="414" height="74"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a city name..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Rv-O5-jmG">
+                                        <rect key="frame" x="10" y="20" width="366" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ci-Bs-LmN">
+                                        <rect key="frame" x="384" y="20" width="20" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <color key="tintColor" systemColor="systemIndigoColor"/>
+                                        <state key="normal" image="magnifyingglass" catalog="system"/>
+                                        <connections>
+                                            <action selector="findTemp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WBD-Hc-OZ0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="0Ci-Bs-LmN" firstAttribute="top" secondItem="Y0Z-lT-80j" secondAttribute="top" constant="20" symbolic="YES" id="BOr-kc-KLm"/>
+                                    <constraint firstAttribute="bottom" secondItem="0Ci-Bs-LmN" secondAttribute="bottom" constant="20" symbolic="YES" id="FIm-Qn-aiR"/>
+                                    <constraint firstItem="6Rv-O5-jmG" firstAttribute="top" secondItem="Y0Z-lT-80j" secondAttribute="top" constant="20" symbolic="YES" id="GuM-7K-zlc"/>
+                                    <constraint firstItem="6Rv-O5-jmG" firstAttribute="leading" secondItem="Y0Z-lT-80j" secondAttribute="leading" constant="10" id="MhU-hy-2FY"/>
+                                    <constraint firstAttribute="trailing" secondItem="0Ci-Bs-LmN" secondAttribute="trailing" constant="10" id="OcZ-JA-xms"/>
+                                    <constraint firstItem="0Ci-Bs-LmN" firstAttribute="leading" secondItem="6Rv-O5-jmG" secondAttribute="trailing" constant="8" symbolic="YES" id="hHW-hd-kHR"/>
+                                    <constraint firstAttribute="bottom" secondItem="6Rv-O5-jmG" secondAttribute="bottom" constant="20" symbolic="YES" id="sst-lw-OMk"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemGray2Color"/>
+                        <constraints>
+                            <constraint firstItem="Y0Z-lT-80j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bWO-0w-O2r"/>
+                            <constraint firstItem="Y0Z-lT-80j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ehE-tr-mEO"/>
+                            <constraint firstItem="Y0Z-lT-80j" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="f5C-jL-OwH"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cityName" destination="6Rv-O5-jmG" id="9df-4B-UAy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="45.535714285714285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
