--- a/WeatherAPI/View/Base.lproj/Main.storyboard
+++ b/WeatherAPI/View/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Weather View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="WeatherAPI" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WeatherViewController" customModule="WeatherAPI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a city name..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Rv-O5-jmG">
                                         <rect key="frame" x="10" y="20" width="366" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="go"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ci-Bs-LmN">
                                         <rect key="frame" x="384" y="20" width="20" height="34"/>
@@ -44,17 +44,81 @@
                                     <constraint firstAttribute="bottom" secondItem="6Rv-O5-jmG" secondAttribute="bottom" constant="20" symbolic="YES" id="sst-lw-OMk"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MeR-8i-PNb" userLabel="DetailView">
+                                <rect key="frame" x="0.0" y="118" width="414" height="744"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wm4-O4-Cp4">
+                                        <rect key="frame" x="8" y="140" width="398" height="73"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="73" id="ZdF-of-3vT"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ET-vs-cG2">
+                                        <rect key="frame" x="8" y="280" width="398" height="73"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="73" id="rQB-dg-ktW"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind Speed:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="apE-9c-74y">
+                                        <rect key="frame" x="8" y="420" width="398" height="73"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="73" id="r71-0m-tCr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gxa-CJ-kcU">
+                                        <rect key="frame" x="8" y="0.0" width="398" height="73"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="73" id="Rgx-UU-nl3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="apE-9c-74y" secondAttribute="trailing" constant="8" id="5pP-V4-Uxb"/>
+                                    <constraint firstAttribute="trailing" secondItem="9ET-vs-cG2" secondAttribute="trailing" constant="8" id="KF1-wQ-mK5"/>
+                                    <constraint firstItem="apE-9c-74y" firstAttribute="leading" secondItem="MeR-8i-PNb" secondAttribute="leading" constant="8" id="M4X-hQ-enW"/>
+                                    <constraint firstItem="9ET-vs-cG2" firstAttribute="leading" secondItem="MeR-8i-PNb" secondAttribute="leading" constant="8" id="Qza-o5-N3o"/>
+                                    <constraint firstItem="Wm4-O4-Cp4" firstAttribute="top" secondItem="Gxa-CJ-kcU" secondAttribute="bottom" constant="67" id="Tf3-4G-LTE"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gxa-CJ-kcU" secondAttribute="trailing" constant="8" id="hL2-di-BXC"/>
+                                    <constraint firstItem="Gxa-CJ-kcU" firstAttribute="top" secondItem="MeR-8i-PNb" secondAttribute="top" id="p2f-El-cnD"/>
+                                    <constraint firstAttribute="trailing" secondItem="Wm4-O4-Cp4" secondAttribute="trailing" constant="8" id="tBd-D6-e2Y"/>
+                                    <constraint firstItem="apE-9c-74y" firstAttribute="top" secondItem="9ET-vs-cG2" secondAttribute="bottom" constant="67" id="tJW-JG-TVr"/>
+                                    <constraint firstItem="9ET-vs-cG2" firstAttribute="top" secondItem="Wm4-O4-Cp4" secondAttribute="bottom" constant="67" id="v19-t2-nir"/>
+                                    <constraint firstItem="Wm4-O4-Cp4" firstAttribute="leading" secondItem="MeR-8i-PNb" secondAttribute="leading" constant="8" id="vdB-T7-nrg"/>
+                                    <constraint firstItem="Gxa-CJ-kcU" firstAttribute="leading" secondItem="MeR-8i-PNb" secondAttribute="leading" constant="8" id="xE4-bw-swO"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                         <constraints>
+                            <constraint firstItem="MeR-8i-PNb" firstAttribute="top" secondItem="Y0Z-lT-80j" secondAttribute="bottom" id="QF3-D5-6zO"/>
+                            <constraint firstItem="MeR-8i-PNb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Uwd-6z-Xky"/>
                             <constraint firstItem="Y0Z-lT-80j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="bWO-0w-O2r"/>
                             <constraint firstItem="Y0Z-lT-80j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ehE-tr-mEO"/>
                             <constraint firstItem="Y0Z-lT-80j" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="f5C-jL-OwH"/>
+                            <constraint firstItem="MeR-8i-PNb" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="wL4-uH-oNF"/>
+                            <constraint firstItem="MeR-8i-PNb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wea-oN-ZWp"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cityLabel" destination="Gxa-CJ-kcU" id="aq1-Mn-ToC"/>
                         <outlet property="cityName" destination="6Rv-O5-jmG" id="9df-4B-UAy"/>
+                        <outlet property="temperature" destination="9ET-vs-cG2" id="Vy4-Ss-Iid"/>
+                        <outlet property="weatherDescription" destination="Wm4-O4-Cp4" id="N2r-Z1-d8d"/>
+                        <outlet property="windSpeed" destination="apE-9c-74y" id="CVU-PN-sc8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -64,6 +128,9 @@
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
